[package]
name = "mg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version ="0.7.4", features = ["tracing"]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing = "0.1"
tower = { version = "0.4", features = ["util"] }
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.58"
chrono = "0.4.38"
http = "1.0.0"
mime = "0.3.17"
http-body-util = "0.1.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[workspace.lints]
clippy.all = { level = "deny", priority = -1 }
clippy.pedantic = { level = "deny", priority = -1 }
clippy.restriction = { level = "deny", priority = -1 }
clippy.cargo = { level = "deny", priority = -1 }
clippy.nursery = "deny"
